--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Two-Factor Authentication</title>
 </head>
 
@@ -46,7 +46,7 @@
       </form>
     </div>
   </div>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
